--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
     "redux": "3.6.0",
+    "redux-persist": "4.8.0",
     "redux-thunk": "2.1.0"
   },
   "devDependencies": {
