--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
   "author": "Tinus Wagner",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "3.3.7",
     "object-assign": "4.1.0",
     "react": "15.5.4",
     "react-dom": "15.5.4",
+    "react-fa": "4.2.0",
+    "react-file-base64": "1.0.3",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
+    "react-slick": "0.15.0",
     "redux": "3.6.0",
     "redux-persist": "4.8.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "uuid": "3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
